--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 }
 </script>
 </head>
-<body class="bg-slate-50 text-slate-900">
+<body class="bg-white text-slate-900">
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
 </body>
