--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     "react-router-dom": "https://esm.sh/react-router-dom@7.1.3?external=react,react-dom",
     "lucide-react": "https://esm.sh/lucide-react@0.460.0?external=react",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "react/": "https://esm.sh/react@^19.2.4/"
+    "react/": "https://esm.sh/react@^19.2.4/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.39.0"
   }
 }
 </script>
