feat: Update app branding and meta tags
Rename application from "JB Housing" to "입찰파트너" across project files. Update meta tags in `index.html` to reflect the new branding and provide richer SEO information. This includes adding Open Graph and Twitter meta tags for better social media sharing and updating the title and description to be more descriptive of the service. Also, adjusted font weights and added a favicon. Added async initialization for `dbService` in `index.tsx` and updated mock data and types for user and AI reports.

--- a/index.html
+++ b/index.html
@@ -4,17 +4,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JB Housing | 전문 법원경매 대리입찰</title>
+    <!-- Primary Meta Tags -->
+    <title>입찰파트너 | 대한민국 No.1 법원경매 대리입찰 플랫폼</title>
+    <meta name="title" content="입찰파트너 | 대한민국 No.1 법원경매 대리입찰 플랫폼">
+    <meta name="description" content="AI 정밀 권리분석, 2억 원 배상책임보험 보장, 전국 18개 법원 전문가 그룹. 안전하고 수익성 높은 경매 투자의 시작은 입찰파트너입니다.">
+    <meta name="keywords" content="법원경매, 대리입찰, 권리분석, 부동산투자, 경매컨설팅, 입찰대행, 경매수익률">
+    <meta name="author" content="BID PARTNER">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://bidpartner.kr/">
+    <meta property="og:title" content="입찰파트너 | 전문 법원경매 대리입찰">
+    <meta property="og:description" content="AI 분석과 전문가의 만남. 당신의 낙찰을 위해 입찰파트너가 함께합니다.">
+    <meta property="og:image" content="https://images.unsplash.com/photo-1582559886470-df618442317c?q=80&w=1200">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="입찰파트너 | 전문 법원경매 대리입찰">
+    <meta property="twitter:description" content="AI 분석과 전문가의 만남. 당신의 낙찰을 위해 입찰파트너가 함께합니다.">
+
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚖️</text></svg>">
+
     <style>
         body {
             font-family: 'Noto Sans KR', sans-serif;
+            background-color: #fcfcfc;
+            -webkit-font-smoothing: antialiased;
         }
         .font-serif {
             font-family: 'Playfair Display', serif;
         }
-        /* 스크롤바 숨기기 */
+        /* 스크롤바 커스텀 */
+        ::-webkit-scrollbar {
+            width: 8px;
+        }
+        ::-webkit-scrollbar-track {
+            background: #f1f1f1;
+        }
+        ::-webkit-scrollbar-thumb {
+            background: #001A3D;
+            border-radius: 10px;
+        }
+        ::-webkit-scrollbar-thumb:hover {
+            background: #C5A059;
+        }
         .no-scrollbar::-webkit-scrollbar {
             display: none;
         }
